# charly-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  braindump.md
.github/workflows/: rust.yml
docs/: grammar.bnf  grammar.md  language.md  new-grammar.bnf
examples/: charly.ch  dev.ch  grammar-check.ch  ideas.ch
src/: main.rs
src/charly/: diagnostics.rs  mod.rs  test_utils.rs  token.rs  tokenizer.rs  window_buffer.rs
src/charly/compiler/: cst.rs  cst_parser.rs  mod.rs  token.rs  tokenizer.rs  tokenset.rs
src/charly/utils/: ascii_tree.rs  cst_printer.rs  diagnostics.rs  fuel_store.rs  mod.rs  window_buffer.rs
