[package]
name = "charly"
description = "Charly programming language"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
bitflags = "2.9.0"
clap = { version = "4.5.37", features = ["derive", "cargo", "env"] }
compile-time-crc32 = "0.1.2"
crc-fast = "1.1.0"
enum_primitive = "0.1.1"
indent = "0.1.1"
indoc = "2.0.6"
pretty_assertions = "1.4.1"
rustyline = "15.0.0"
static_assertions = "1.1.0"
once_cell = "1.21.3"

[profile.release]
lto = "fat"
