[package]
name = "charly"
description = "Charly programming language"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
clap = { version = "4.5.53", features = ["derive", "cargo", "env"] }
indent = "0.1.1"
indoc = "2.0.7"
pretty_assertions = "1.4.1"
rustyline = "17.0.2"
static_assertions = "1.1.0"
casey = "0.4.2"

[profile.release]
lto = "fat"
